--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,15 @@
 # BlueJ files
 *.ctxt
 
+# DO NOT IGNORE TTS CLASSES
+!TTS.class
+!TTS.ctxt
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
+# *.jar # keep libraries
 *.war
 *.nar
 *.ear
