Fix TTS to work without library preferences set up

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # BlueJ files
 *.ctxt
 
-# DO NOT IGNORE TTS CLASSES
+# DO NOT IGNORE TTS CLASSES - PRECOMPILED
 !TTS.class
 !TTS.ctxt
 
@@ -25,5 +25,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-doc/
